# aeco-backend

./: .gitignore  GUIA_INICIALIZACAO.md  GUIA_PERSONALIZACAO_FORMULARIO.md  README.md  VERSIONAMENTO.md  env.example  limpar_banco.py  pyproject.toml  teste_automatizado.py  teste_ux.html
backend/app/: config.py  main.py
backend/app/db/: mongo.py
backend/app/models/: clientes.py  comum.py  formulario_terrenos_projetos.py  parametros_urbanisticos.py  projeto.py
backend/app/repositories/: clientes_repo.py  formulario_terrenos_repo.py  parametros_urbanisticos_repo.py  projetos_repo.py
backend/app/routers/: clientes.py  formulario_terrenos.py  health.py  parametros_urbanisticos.py  projetos.py  web.py
backend/app/services/: connections_check.py  parametros_urbanisticos_service.py  validacao_zone_service.py
backend/app/utils/: __init__.py  codigo_projeto.py
backend/app/web/templates/: base.html  cadastro_clientes.html  cadastro_projeto.html  cadastro_projetos.html  cadastro_projetos_backup.html  dashboard.html  formulario_terrenos.html  orquestracao.html  processos.html
frontend/public/: formulario_terrenos.html  index.html
processos/: PROCESSOS DYNAMO.xlsx  paramentros_limites_do_terrero_-_mod_01.dyn
tests/: test_connections.py
utilitarios/: TESTE CONSULTA HTTP.dyn  parametroAlturaMaximaPermitida.py  parametroOutorgaOnerosa.py  parametroRecuoFrontal.py  parametroRecuoFundos.py  parametroRecuoLateral.py  parametroTestada.py
